fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
     width: 10px;
 }
 
+@media only screen and (max-width:700px){
+    *::-webkit-scrollbar{
+        width: 10px;
+    }
+}
+
 *::-webkit-scrollbar-track{
     background-color: black;
 }
